skeletons/runtimeclass.yaml
# Pod using the RuntimeClass
apiVersion: v1
kind: Pod
metadata:
  name: sandboxed-pod
  namespace: default
spec:
  runtimeClassName: gvisor
  containers:
  - name: app
    image: nginx:1.27
